Add SwiftData and domain models, restructure app folders
Introduces SwiftData models for User, BirthChart, and ReportPurchase, along with domain models for NatalChart, Planet, House, Aspect, ZodiacSign, and ReportArea. Refactors folder structure to separate App, Core, Models, and Resources, and updates .gitignore for SwiftData files. Removes legacy Item model and updates ContentView for new onboarding. Adds ModelContainer+Shared helper and comprehensive unit tests for all new models. Updates specs to mark related tasks as complete.

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,12 @@ iOSInjectionProject/
 ## Config file with API keys (CRITICAL - never commit!)
 AstroSvitla/Config/Config.swift
 
+## SwiftData persistent stores
+*.sqlite
+*.sqlite-shm
+*.sqlite-wal
+*.store
+
 ## macOS
 .DS_Store
 
