Migrate chart calculation to Prokerala API
Replaced legacy AstrologyAPI integration with Prokerala API throughout the chart calculation flow. Updated configuration, services, and models to support Prokerala authentication and endpoints. Refactored ChartCalculator to use NatalChartService, added error handling for API/network issues, and updated NatalChartWheelView to display API-generated chart images with loading and error states. Updated specs to mark migration tasks as complete.

--- a/AstroSvitla/Config/Config.swift.example
+++ b/AstroSvitla/Config/Config.swift.example
@@ -22,17 +22,15 @@ enum Config {
     /// Base URL for OpenAI API requests
     static let openAIBaseURL = "https://api.openai.com/v1"
 
-    // MARK: - AstrologyAPI (Prokerala) Configuration
+    // MARK: - Prokerala API Configuration
 
-    /// AstrologyAPI User ID for Basic Authentication
-    /// Get credentials from https://astrologyapi.com (Free tier: 5,000 credits/month)
-    static let astrologyAPIUserID = "YOUR_USER_ID_HERE"
+    /// Prokerala API Token (JWT) for Authentication
+    /// Get credentials from https://api.prokerala.com/
+    /// You'll need to register and get a JWT token from your dashboard
+    static let prokeralaAPIToken = "YOUR_PROKERALA_JWT_TOKEN_HERE"
 
-    /// AstrologyAPI Key for Basic Authentication
-    static let astrologyAPIKey = "YOUR_API_KEY_HERE"
-
-    /// Base URL for AstrologyAPI endpoints
-    static let astrologyAPIBaseURL = "https://json.astrologyapi.com/v1"
+    /// Base URL for Prokerala API endpoints
+    static let prokeralaAPIBaseURL = "https://api.prokerala.com/v2"
 
     // MARK: - App Configuration
 
@@ -72,11 +70,9 @@ enum Config {
         openAIAPIKey != "YOUR_OPENAI_API_KEY_HERE"
     }
 
-    static var isAstrologyAPIConfigured: Bool {
-        !astrologyAPIUserID.isEmpty &&
-        astrologyAPIUserID != "YOUR_USER_ID_HERE" &&
-        !astrologyAPIKey.isEmpty &&
-        astrologyAPIKey != "YOUR_API_KEY_HERE"
+    static var isProkeralaAPIConfigured: Bool {
+        !prokeralaAPIToken.isEmpty &&
+        prokeralaAPIToken != "YOUR_PROKERALA_JWT_TOKEN_HERE"
     }
 
     static func validate() throws {
@@ -84,8 +80,8 @@ enum Config {
             throw ConfigError.missingAPIKey("OpenAI API key not configured in Config.swift")
         }
 
-        guard isAstrologyAPIConfigured else {
-            throw ConfigError.missingAPIKey("AstrologyAPI credentials not configured in Config.swift")
+        guard isProkeralaAPIConfigured else {
+            throw ConfigError.missingAPIKey("Prokerala API token not configured in Config.swift")
         }
     }
 }
