Refactor profile creation and chart caching logic
Profile creation now saves user data before attempting to fetch natal charts, improving reliability in case of network errors. Added methods to create profiles without charts and attach charts later. Refactored chart and report decoding/encoding to avoid actor isolation issues. Updated UI for Settings and Report List views with glass card and premium background effects. Improved error handling and user feedback throughout profile and chart flows. Updated Info.plist for API transport security exceptions.

--- a/AstroSvitla/Info.plist
+++ b/AstroSvitla/Info.plist
@@ -6,5 +6,26 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>api.astrology-api.io</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSThirdPartyExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSThirdPartyExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSExceptionMinimumTLSVersion</key>
+				<string>TLSv1.2</string>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
