Add zoomable chart view and improve image handling
Introduces ZoomableChartView for full-screen pinch-to-zoom of natal chart images. NatalChartWheelView now prefers cached PNG images and converts SVG to PNG for better display. Chart view supports tap-to-zoom, and SVGWebViewController is now public for reuse. MainFlowView and report generation UI are visually enhanced, and purchase confirmation features are updated for clarity. Config.swift now loads secrets from environment or Info.plist, with a new example xcconfig for API keys. AIPromptBuilder supports toggling inline source citations in generated prompts.

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ iOSInjectionProject/
 
 ## Config file with API keys (CRITICAL - never commit!)
 AstroSvitla/Config/Config.swift
+AstroSvitla/Config/Secrets.xcconfig
 
 ## SwiftData persistent stores
 *.sqlite
