--- a/AstroSvitla/Info.plist
+++ b/AstroSvitla/Info.plist
@@ -23,6 +23,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
